--- a/event.html
+++ b/event.html
@@ -66,7 +66,7 @@ It is for experienced meditators who want to have a prolonged period of time to 
 <div class="page-section">
 <h2 class="section-title">Schedule</h2>
 
-<table>
+<table id="schedule-basics">
   <caption class="class-name">Basics of Inner Meditation</caption>
 <tr>
   <td>Address:</td>
@@ -95,7 +95,7 @@ It is for experienced meditators who want to have a prolonged period of time to 
 </table>
 
 
-<table>
+<table id="schedule-retreat">
   <caption class="class-name">Half Day Meditation Retreat</caption>
 <tr>
   <td>Address:</td>
