Remove unfinished links.

--- a/practice.html
+++ b/practice.html
@@ -1,79 +1,9 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-#date:   2016-12-02 19:06:33 -0800
+layout: page
+title:  Practice
+#date:   2017-04-08 10:06:33 -0800
+permalink: /practice/
 ---
-
-<div class="page-introduction" id="introduction">
-<h2 class="section-title">Introduction</h2>
-<p>
-<img id="img-inner-orbit" src="images/orbits-points.png"
-      height="300" alt="inner energy flow"/>
-
-Inner meditation is a particularly beneficial practice.
-
-It concentrates inward, not outside, namely, it focuses your attention and awareness on internal places of your body.
-
-This contrasts to some meditation styles that require music or imagination of external images.
-
-In inner meditation, you look at, listen to, and feel the insides of you own self by applying few basic techniques in concert, including breath, concentration, relaxation, good body posture, and mental power.
-</p>
-
-<p>
-Bringing all attention inward causes profound changes to the body and mind.
-
-It develops and improves our energy flow, also known as <em>qi</em> (pronounce CHEE).
-
-The development of qi within yourself enhances health, generates a sense of calm and well-being, and replenishes inner energy reserves.
-
-Further, it develops awareness and consciousness based on improved body conditions, and this leads you along on a path of spiritual enlightenment.
-</p>
-</div>
-
-
-<div class="page-section">
-<h2 class="section-title">Benefits</h2>
-<p>
-People start to feel physical and mental changes as healthy benefits after they practice inner meditation because this practice has healing effects in nature.
-
-Some people even begin to heal others.
-
-Here is some commonly seen benefits.
-
-<h3 class="list-title">Physiologically</h3>
-<ul>
-<li>Healing effects</li>
-<li>Improved health status and less likely to be sick</li>
-<li>Improved sleep quality</li>
-<li>Having better memory</li>
-<li>Having more energy, less or no fatigue</li>
-</ul>
-<h3 class="list-title">Psychologically</h3>
-<ul>
-<li>Having more love and happy feeling</li>
-<li>Calming down more easily</li>
-<li>Concentrate more easily</li>
-<li>Becoming more optimistic and positive</li>
-<li>Becoming more open and tolerant</li>
-<li>Having fewer or no complaints</li>
-<li>Having fewer or no dramatic emotional changes&nbsp;</li>
-</ul>
-
-<!--
-<h3 class="list-title">During meditation</h3>
-<ul>
-<li>Feel warm in lower body</li>
-<li>Feel happy</li>
-<li>Feel qi move</li>
-<li>Body becomes softer, less stiff</li>
-<li>Secrete more saliva</li>
-</ul>
--->
-</p>
-</div>
-
 
 <div class="page-section">
 <h2 class="section-title">Important Body Places</h2>
