--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 # You don't need to edit this file, it's empty on purpose.
 # Edit theme's home layout instead if you wanna make some changes
 # See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+layout: page
 #date:   2016-12-02 19:06:33 -0800
 ---
 
 <div class="page-introduction" id="introduction">
 <h2 class="section-title">Introduction</h2>
 <p>
-<img id="img-inner-orbit" src="images/orbits-points.png"
+<img id="img-inner-orbit" src="/images/orbits-points.png"
       height="300" alt="inner energy flow"/>
 
 Inner meditation is a particularly beneficial practice.
@@ -22,9 +22,9 @@ In inner meditation, you look at, listen to, and feel the insides of you own sel
 </p>
 
 <p>
-Bringing all attention inward causes profound changes to the body and mind.
+Bringing all attention inward triggers profound changes in the body and the brain.
 
-It develops and improves our energy flow, also known as <em>qi</em> (pronounce CHEE).
+It develops and improves our energy flow, also known as <em>qi</em> (pronounce chee).
 
 The development of qi within yourself enhances health, generates a sense of calm and well-being, and replenishes inner energy reserves.
 
@@ -46,7 +46,7 @@ Here is some commonly seen benefits.
 <p>
 <ul>
 <li>Healing effects</li>
-<li>Improved health status and less likely to be sick</li>
+<li>Improved health status</li>
 <li>Improved sleep quality</li>
 <li>Having better memory</li>
 <li>Having more energy, less or no fatigue</li>
@@ -61,6 +61,8 @@ Here is some commonly seen benefits.
 <li>Having fewer or no complaints</li>
 <li>Having fewer or no dramatic emotional changes&nbsp;</li>
 </ul>
+
+Besides having improved physical and mental status, many experienced practitioners start to feel deep connections among all living beings and perceive subtle energy interactions between living beings and their environments.
 
 <!--
 <h3 class="list-title">During meditation</h3>
@@ -77,8 +79,16 @@ Here is some commonly seen benefits.
 
 
 <div class="page-section">
-<h2 class="section-title">Practice</h2>
+<h2 class="section-title">Art of Practice</h2>
 <p>
+Inner meditation is an art of practice.
 
+You must practice it to get its benefits.
+
+Its goal is improving the body and the brain, and the only way is exercising your body and brain with certain disciplines.
+
+Inner meditation is all about practicing such disciplines.
+
+You may have a taste of <a href="/practice/">its practices here</a>.
 </p>
 </div>
