--- a/practice.html
+++ b/practice.html
@@ -5,34 +5,38 @@ title:  Practice
 permalink: /practice/
 ---
 
+Inner meditation is about bringing attention inward.
+
+Knowing where to focus on is important.
+
 <div class="page-section">
 <h2 class="section-title">Important Body Places</h2>
 <p>
-Several places of the body play very important roles in inner meditation on which we concentrate our full attention.
+Several places of the body play critical roles and they are where we concentrate on.
 
 One place is the bottom of the torso, centered around the perineum, which is also a meridian point.
 
 A second place is the spine.
 
-A third place is the <em>dan tian</em>, also called the center of the body, which is located behind the navel or the belly button and close to the spine.
+A third place is the <em>dan tian</em>, also called the center of the body, which is located behind the navel or the belly button and closer to the spine.
 
 Other places include the heart, the center of the brain, the top of the skull, and the central thrusting channel which goes up from the perineum to the top of the skull.
 </p>
 
 
 <p>
-  Not all of these places are used together at the beginning of practices.
+Not all of these places are used together at the beginning of practices.
 
-  Basic practices normally involve the perineum, the spine, and the dan tian.
+At the basic level, the perineum, the spine, and the dan tian are important.
 
-  Others are targets of more advanced practices.
+More advanced practices start to use other places.
 </p>
 
 
-<img src="images/organs.png" id="img-organs" height="250" alt="organs"/>
+<img src="/images/organs.png" id="img-organs" height="250" alt="organs"/>
 <h3 class="section-subtitle">Organs</h3>
 <p>
-Organs also play an important role in inner meditation because they are tightly connected to emotion and subtle psychological activities.
+Organs also play important roles in inner meditation because they are tightly connected to emotion and subtle psychological activities.
 
 The organs that we meditate about are the liver, heart, spleen, lungs, and kidneys.
 </p>
@@ -41,24 +45,22 @@ The organs that we meditate about are the liver, heart, spleen, lungs, and kidne
 <div class="page-section" id="basicPractice">
 <h2 class="section-title">Basic Practices</h2>
 
-<p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of concrete methods.
+<p>Inner meditation has a broad range of practices, and we do not even attempt to present a comprehensive list of methods.
 
-However, they do share some <a href="/#commonChars">common characteristics</a> which we discuss later.
-
-<p id="YinYangBreath">In order to give a concrete picture of what an inner meditation practice may look like, this section describes one of the simplest but extremely powerful methods: the Yin Yang Breath.
+<p id="YinYangBreath">In order to give a concrete picture of what an inner meditation practice may look like, we describe one of the simplest but extremely powerful methods: the Yin Yang Breath.
 
 It roughly consists of the following steps:
 <ol>
-<li>Prepare a good body posture that emphasizes an upright and straight spine, a smiling face, and a relaxed whole body.
+<li>Prepare a good body posture that emphasizes an upright and straight spine, a smiling face, and a relaxed body.
 
 <li>
-  <img src="images/taiji-blue-red.png" id="img-taiji" height="200"
+  <img src="/images/taiji-blue-red.png" id="img-taiji" height="200"
         alt="yin yang breath as if in tain ji"/>
 Become aware of your breath and know the inhalation and exhalation process.
 
 Elongate the exhalation process by making it more slowly than normal.
 
-Meanwhile focus all intention on perineum.
+Meanwhile concentrate on perineum.
 
 At the end of exhalation, hold the breath for 5-10 seconds, and then release the entire body to let it inhale naturally.
 
@@ -68,7 +70,7 @@ This is so called the yin breath because the attention and awareness concentrate
 
 After some time, go to the next step.
 
-<li>Lengthen the inhalation process by making it slowly, and meanwhile focus all intention on perineum.
+<li>Lengthen the inhalation process by making it slowly, and focus on perineum.
 
 At the end of inhalation, hold the breath for 5-10 seconds, and then release the entire body to let it exhale naturally.
 
@@ -98,7 +100,7 @@ Another example practice is <a href="http://www.universal-tao.com/article/smile.
 </p>
 
 <p>
-<strong>Please note:</strong> just like learning any body or mind related work it may not be beneficial or even risky if you learn on your own because you may not practice with the right form or technique.
+<strong>Please note:</strong> just like learning any body or mind related work it may not be beneficial or even risky if you learn on your own because you may not use the right form or technique.
 
 The most effective way of learning such skill is studying from an instructor in person, so that any inappropriate movements can be corrected promptly.
 </p>
@@ -108,18 +110,18 @@ The most effective way of learning such skill is studying from an instructor in 
 <div class="page-section">
 <h2 class="section-title">Inner Meditation Classes</h2>
 <p>
-A series of inner meditation classes are available at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center</a> every Saturday.
+We teach inner meditation classes and workshops at <a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movement Center</a> San Mateo, CA regularly.
 
-The <a href="/event/">Event</a> page has more information.
+Please see details on the <a href="/event/">Event</a> page.
 </p>
 
 </div>
 
 
 <div class="page-section" id="spirituality">
-<h2 class="section-title">A Path to Good Health, Wellness, and Enlightenment</h2>
+<h2 class="section-title">A Path to Enlightenment</h2>
 
-<p>The <a href="#basicPractice">Yin Yang Breath</a> exercise described above suggests a practical path of spiritual development.
+<p>The <a href="#YinYangBreath">Yin Yang Breath</a> exercise described above suggests a practical path of spiritual development.
 
 Inner meditation regards a human body as the fundamental building material for higher level spirituality.
 
@@ -138,40 +140,42 @@ When the life energy is enhanced and preserved, it automatically goes up along t
 
 Then we develop more energy in organs such as the heart and kidneys.
 
-With persistent practice, it goes up again, and we move practice centers up too.
+With persistent practice, energy goes up again, and we move practice centers up too.
 
-At certain levels, it reaches the brain, and we train our brain to become aware of any subtle mental activities.
+At certain levels, energy reaches the brain, and we train our brain to become aware of any subtle mental activities.
 
-With the highly charged life energy, the brain will open up itself and present the practitioner spiritual experience that the brain never generates before, and this new experience includes spiritual enlightenment.
+With the highly charged life energy, the brain will open up itself and receive energy from the universe.
+
+This presents the practitioner spiritual experience that the brain never generates before, and this new experience includes spiritual enlightenment.
 </p>
 
 
-<p>This process improves one's health from the very beginning when a person starts to develop the life energy at the bottom of the torso.
+<p>This process improves your health from the very beginning when you start to develop the life energy at the bottom of the torso.
 
 That part of a human body has tremendous amount of sexual energy.
 
-It is very difficult for a normal person to control and utilize the sexual energy when it builds up.
+Inner meditation practices help you manage your sexual energy by transforming it into life energy, and the latter circulates inside your body and nourishes tissues and organs.
 
-Inner meditation practices help a practitioner successfully manage his sexual energy by transforming it into life energy, and the latter circulates inside the body and nourishes tissues and organs.
+This greatly enhances your immune system and improves your health status.
 
-This greatly enhances a person's immune system and improves his health.
-
-In addition, the life energy helps him maintain a relatively high energy level which is very useful in dealing with his daily life.
+In addition, the life energy helps you maintain a relatively high energy level which is very useful in performing your daily duties.
 </p>
 
+<p>In this framework, there is no mystery or superstition regarding what happens to your body and mind.
 
-<p>In this framework of meditation, there is no mystery or superstition in what happens to your body and mind.
-
-You make every achievement based on how much life energy you can cultivate inside you, and spiritual development and enlightenment is natural results of this cultivation.
+You make every achievement based on how much life energy you can cultivate inside you, and spiritual development and enlightenment is a natural result of this cultivation.
 
 This is also a safe approach because it builds solid foundation in your body before your brain is activated to generate transcendent experience.
 </p>
 
 
-<p>Of course, this is a highly simplified description. We will discuss more <a href="/spirituality/">here</a>.
-</p>
+
 </div>
 
+<!--
+
+<p>Of course, this is a highly simplified description. We will discuss more <a href="/spirituality/">here</a>.
+</p>
 
 <div class="page-section" id="commonChars">
 <h2 class="section-title">Common Characteristics</h2>
@@ -184,3 +188,4 @@ This is also a safe approach because it builds solid foundation in your body bef
 
 </p>
 </div>
+-->
