--- a/event.html
+++ b/event.html
@@ -37,7 +37,7 @@ It is for experienced meditators who want to have a prolonged period of time to 
 
 <li>The idea is to create an environment for a half day retreat in which you may merge into deep meditation states, synchronize your body and mind, discover and enjoy deep connections inside you and among you, us, and the universe.
 
-<li>We suggest you to bring and use your eye cover and earplugs to turn this retreat into a dark and silent meditation experience. A dark and silent environment minimizes external sensory stimuli and makes it easy to focus insides of your body. 
+<li>We suggest you to bring and use your eye cover and earplugs to turn this retreat into a dark and silent meditation experience. A dark and silent environment minimizes external sensory stimuli and makes it easy to focus insides of your body.
 
 <li>During the retreat please refrain from talking, using a cell phone, reading, etc.&nbsp;because these activities may interrupt your and other people's meditation.
 
@@ -49,7 +49,7 @@ It is for experienced meditators who want to have a prolonged period of time to 
 
 <li>You may leave the retreat during a break. Please do not do it during meditation sessions because it may interrupt other people's meditation.
 
-<li>Minimum requirement: the minimum length of practice is one session, so you must be able to meditate for 40 minutes. 
+<li>Minimum requirement: the minimum length of practice is one session, so you must be able to meditate for 40 minutes.
 
 </ul>
 
@@ -66,6 +66,8 @@ It is for experienced meditators who want to have a prolonged period of time to 
 <div class="page-section">
 <h2 class="section-title">Schedule</h2>
 
+The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meetup/events/">our meetup calender</a>.
+
 <table id="schedule-basics">
   <caption class="class-name">Basics of Inner Meditation</caption>
 <tr>
@@ -74,7 +76,7 @@ It is for experienced meditators who want to have a prolonged period of time to 
 </tr>
 <tr>
   <td>Date &amp;Time:</td>
-  <td>1:30-2:30pm every Sunday, Starting on 4/23/2017</td>
+  <td>1:30-2:30pm Sunday, 6/11/2017</td>
 </tr>
 <tr><td>Duration:</td>
 <td>1 hour</td>
@@ -103,7 +105,7 @@ It is for experienced meditators who want to have a prolonged period of time to 
 </tr>
 <tr>
   <td>Date &amp; Time:</td>
-  <td>8:30am-12:30pm every Sunday, Starting on 4/23/2017</td>
+  <td>8:30am-12:30pm Sunday, 6/11/2017</td>
 </tr>
 <tr><td>Duration:</td>
   <td>4 hour</td>
