--- a/event.html
+++ b/event.html
@@ -112,7 +112,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 </tr>
 <tr><td>Donation:</td>
-  <td>$20 sliding scale</td>
+  <td>$0-20 sliding scale</td>
 </tr>
 <tr><td></td>
   <td><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
