Update retreat and add healing info.

--- a/event.html
+++ b/event.html
@@ -11,45 +11,42 @@ permalink: /event/
 <p>
 We offer two classes at different levels.
 
-The first one is <strong>Basics of Inner Meditation</strong> in which we guide you through practice sessions step by step, with the goal of helping you be able to practice on your own after the class.
+The first one is <strong>Basics of Inner Meditation</strong> in which we guide you through practices step by step, with the goal of helping you be able to repeat it on your own after the class.
 
 The class is about one hour, but your own practice session may range from 15 to 30 minutes like most beginners.
 </p>
 
 
 <p>
-The second one is <strong>Half Day Meditation Retreat</strong>.
+The second one is <strong>Meditation Retreat</strong>.
 
-It is for experienced meditators who want to have a prolonged period of time to develop their body and mind. Please read the following instructions before RSVPing.
+It is for experienced meditation practitioners who want to have a prolonged period of time to develop their body and mind. The idea is to create an environment in which you may merge into deep meditation states, discover and enjoy profound connections inside you and the universe. Please read the following instructions before RSVPing.
 
 <ul>
-<li>The entire retreat runs for about 4 hours. It consists of 4 meditation sessions with each being 40 minutes followed by a 20-minute break.
+<li>The entire retreat runs for about 4 hours. It consists of 4 sessions with each being 40 minutes followed by a 20-minute break.
 
-<li>The first session starts at 8:45am, and the next three sessions start at 9:45am, 10:45am, and 11:45am, respectively.
+<li>The first session starts at 2:45pm, and the next three sessions start at 3:45pm, 4:45pm, and 5:45pm, respectively.
 
-<li>We start with body stretch at 8:30am, which facilitates a sitting posture.
+<li>We start with body stretch at 2:30pm as warm-up for upcoming sessions.
 
-<li>We ring a bell at the start and end of each session. We also ring a bell three minutes before the start of a session so that you can go to your mat in time.
+<li>We ring a bell at the start and end of each session. We also ring a bell two minutes before the start of a session so that you can go to your mat in time.
 
-<li>Please make every effort to keep your meditation states during breaks. In the breaks, you may practice walking meditation, yoga, or stretch to release tension or sore in your body, but your mind should continue meditating.
+<li> Please make every effort to keep your meditation states during breaks. You may walk, practice yoga, or stretch to release tension or soreness in your body, but these activities should not interrupt your meditation.
 
-<li>If you do not want to stop during a break, then feel free to continue your practice during the break. We purposely make this a retreat environment to minimize interruptions and distractions.
+<li> If you do not want to take a break, then feel free to continue your practice during the break. We purposely make this a retreat environment to minimize interruptions and distractions.
 
-<li>The idea is to create an environment for a half day retreat in which you may merge into deep meditation states, synchronize your body and mind, discover and enjoy deep connections inside you and among you, us, and the universe.
+<li> We suggest you to bring and use your eye cover and earplugs to turn this retreat into a dark and silent meditation experience. A dark and quiet environment minimizes external sensory stimulus and makes it easy to focus on insides of your body. 
 
-<li>We suggest you to bring and use your eye cover and earplugs to turn this retreat into a dark and silent meditation experience. A dark and silent environment minimizes external sensory stimuli and makes it easy to focus insides of your body.
+<li> During the retreat please refrain from talking, using a cell phone, reading, etc. because these activities may interrupt your and other people's meditation.
 
-<li>During the retreat please refrain from talking, using a cell phone, reading, etc.&nbsp;because these activities may interrupt your and other people's meditation.
+<li> If it's difficult for you to take the entire retreat, say you want to meditate for one session, then we encourage you to join the body stretch and the first session. You can peacefully leave the retreat after the first session. 
 
-<li>If you have questions or concerns about meditation or the event during the retreat, please talk to the retreat organizer.
+<li> You may join a session during a break. Once a session starts, please do not join it. You should wait until it finishes. Then you may join the next session.
 
-<li>If it's difficult for you to take the entire retreat, say you want to meditate for one session, then we encourage you to join the body stretch and the first session. You can peacefully leave the retreat after the first session.
+<li> You may leave the retreat during a break. Please do not do it during meditation sessions because it may interrupt other people's practices.
 
-<li>You may join a session during a break. Once a session starts, please do not join it. You should wait until it finishes. Then you may join the next session.
+<li> Minimum requirement: the minimum length of practice is one session, so you must be able to meditate for 40 minutes.
 
-<li>You may leave the retreat during a break. Please do not do it during meditation sessions because it may interrupt other people's meditation.
-
-<li>Minimum requirement: the minimum length of practice is one session, so you must be able to meditate for 40 minutes.
 
 </ul>
 
@@ -76,7 +73,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Date &amp;Time:</td>
-  <td>1:30-2:30pm Sunday, 6/11/2017</td>
+  <td>1:30-2:30pm Sunday</td>
 </tr>
 <tr><td>Duration:</td>
 <td>1 hour</td>
@@ -98,14 +95,14 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 
 
 <table id="schedule-retreat">
-  <caption class="class-name">Half Day Meditation Retreat</caption>
+  <caption class="class-name">Meditation Retreat</caption>
 <tr>
   <td>Address:</td>
   <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
 </tr>
 <tr>
   <td>Date &amp; Time:</td>
-  <td>8:30am-12:30pm Sunday, 6/11/2017</td>
+  <td>2:30pm-6:30pm Sunday, except the third Sunday of a month</td>
 </tr>
 <tr><td>Duration:</td>
   <td>4 hour</td>
@@ -125,7 +122,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Equipment:</td>
-  <td>A mat which you can comfortably sit on. A blanket to cover your legs.</td>
+  <td>A mat and cushion which you can comfortably sit on. A blanket to cover your legs.</td>
 </tr>
 </table>
 
@@ -136,10 +133,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 
 We call for a sliding scale $20 donation for the meditation retreat.
 
-We have the same policy as AUM--no one is ever turned away due to lack of fund.
-
-If you are curious about this policy then you should check out this <a href="http://www.artsunitymovements.com/">awesome organization</a>.
-</div>
+However, our policy is that no one is ever turned away due to lack of fund.
 
 <div class="page-section">
 <h2 class="section-title">Get Connected</h2>
@@ -151,6 +145,6 @@ Please fill out <a href="http://sv.mikecrm.com/j1xDwH5">this form</a> if you are
 <div class="page-section">
 <h2 class="section-title">Instructor Bio</h2>
 <p>
-Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a college student. Later he studied Taoist inner alchemy and Buddhist Zen meditation. He has taught Taoist inner meditation classes ranging from the basic to advanced level. He has a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual traditions with a scientific attitude. His teaching style is using simple contemporary concepts to explain inner meditation practices that are considered mysterious.
+Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a college student. He has studied and practiced Taoist inner alchemy and Buddhist Zen meditation for over a decade. He takes meditation retreats regularly each year including those in a completely dark environment, so called darkroom retreat. He has taught Taoist inner meditation classes ranging from basic to advanced level. He has a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual traditions with a scientific perspective. His teaching style is using simple contemporary concepts to explain practices that are considered mysterious. He also offers personal qi healing sessions. Please contact him at 650-397-2633 if you are interested in such sessions.
 </p>
 </div>
