--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ Further, it develops awareness and consciousness based on improved body conditio
 <div class="page-section">
 <h2 class="section-title">Benefits</h2>
 <p>
-People start to feel physical and mental changes as healthy benefits after they practice inner meditation because this practice has healing effects in nature.
+People start to feel physical and mental changes after they practice inner meditation for some time because this practice has healing effects in nature.
 
 Some people even begin to heal others.
 
@@ -62,7 +62,7 @@ Here is some commonly seen benefits.
 <li>Having fewer or no dramatic emotional changes&nbsp;</li>
 </ul>
 
-Besides having improved physical and mental status, many experienced practitioners start to feel deep connections among all living beings and perceive subtle energy interactions between living beings and their environments.
+Besides having improved physical and mental status, many experienced practitioners start to feel deep connections among all living beings and perceive subtle energy interactions between them and their environments.
 
 <!--
 <h3 class="list-title">During meditation</h3>
@@ -83,9 +83,9 @@ Besides having improved physical and mental status, many experienced practitione
 <p>
 Inner meditation is an art of practice.
 
-You must practice it to get its benefits.
+You must practice it in order to get its benefits.
 
-Its goal is improving the body and the brain, and the only way is exercising your body and brain with certain disciplines.
+Its goal is improving your body and brain, and the only natural way is exercising your body and brain with certain disciplines.
 
 Inner meditation is all about practicing such disciplines.
 
