--- a/event.html
+++ b/event.html
@@ -35,11 +35,11 @@ It is for experienced meditation practitioners who want to have a prolonged peri
 
 <li> If you do not want to take a break, then feel free to continue your practice during the break. We purposely make this a retreat environment to minimize interruptions and distractions.
 
-<li> We suggest you to bring and use your eye cover and earplugs to turn this retreat into a dark and silent meditation experience. A dark and quiet environment minimizes external sensory stimulus and makes it easy to focus on insides of your body. 
+<li> We suggest you to bring and use your eye cover and earplugs to turn this retreat into a dark and silent meditation experience. A dark and quiet environment minimizes external sensory stimulus and makes it easy to focus on insides of your body.
 
 <li> During the retreat please refrain from talking, using a cell phone, reading, etc. because these activities may interrupt your and other people's meditation.
 
-<li> If it's difficult for you to take the entire retreat, say you want to meditate for one session, then we encourage you to join the body stretch and the first session. You can peacefully leave the retreat after the first session. 
+<li> If it's difficult for you to take the entire retreat, say you want to meditate for one session, then we encourage you to join the body stretch and the first session. You can peacefully leave the retreat after the first session.
 
 <li> You may join a session during a break. Once a session starts, please do not join it. You should wait until it finishes. Then you may join the next session.
 
@@ -145,6 +145,6 @@ Please fill out <a href="http://sv.mikecrm.com/j1xDwH5">this form</a> if you are
 <div class="page-section">
 <h2 class="section-title">Instructor Bio</h2>
 <p>
-Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a college student. He has studied and practiced Taoist inner alchemy and Buddhist Zen meditation for over a decade. He takes meditation retreats regularly each year including those in a completely dark environment, so called darkroom retreat. He has taught Taoist inner meditation classes ranging from basic to advanced level. He has a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual traditions with a scientific perspective. His teaching style is using simple contemporary concepts to explain practices that are considered mysterious. He also offers personal qi healing sessions. Please contact him at 650-397-2633 if you are interested in such sessions.
+Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a college student. He has studied and practiced Taoist inner alchemy and Buddhist Zen meditation for over a decade. He takes meditation retreats regularly each year including those in a completely dark environment, so called darkroom retreat. He has taught Taoist inner meditation classes ranging from basic to advanced level. He has a Ph.D. degree in Computer Science, and he is good at understanding and interpreting spiritual traditions with a scientific approach. His teaching style is using simple contemporary concepts to explain practices that are considered mysterious. He also offers private qi healing sessions and classes. Please contact him at 650-397-2633 if you are interested in those.
 </p>
 </div>
