Update event page.

--- a/event.html
+++ b/event.html
@@ -47,29 +47,21 @@ It is for experienced meditation practitioners who want to have a prolonged peri
 
 <li> Minimum requirement: the minimum length of practice is one session, so you must be able to meditate for 40 minutes.
 
-
 </ul>
-
 </p>
-
-<p>
-<a href="http://www.artsunitymovements.com/aum-center/">Arts Unity Movements Center (AUM)</a> kindly provides a venue for us to teach inner meditation and organize meditation events.
-</p>
-
-
 </div>
 
 
 <div class="page-section">
 <h2 class="section-title">Schedule</h2>
 
-The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meetup/events/">our meetup calender</a>.
+The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meetup/events/">AUM meetup calender</a>.
 
 <table id="schedule-basics">
   <caption class="class-name">Basics of Inner Meditation</caption>
 <tr>
   <td>Address:</td>
-  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
+  <td><address><a href="http://www.artsunitymovements.com/aum-center/">AUM Center</a>, 149 South Blvd, San Mateo, CA 94402</address></td>
 </tr>
 <tr>
   <td>Date &amp;Time:</td>
@@ -98,7 +90,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
   <caption class="class-name">Meditation Retreat</caption>
 <tr>
   <td>Address:</td>
-  <td><address>149 South Blvd, San Mateo, CA 94402</address></td>
+  <td><address><a href="http://www.artsunitymovements.com/aum-center/">AUM Center</a>, 149 South Blvd, San Mateo, CA 94402</address></td>
 </tr>
 <tr>
   <td>Date &amp; Time:</td>
