--- a/event.html
+++ b/event.html
@@ -65,7 +65,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Date &amp;Time:</td>
-  <td>1:30-2:30pm Sunday</td>
+  <td>1:30-2:30pm each Sunday. No class on 8/13 and 8/27.</td>
 </tr>
 <tr><td>Duration:</td>
 <td>1 hour</td>
@@ -94,7 +94,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Date &amp; Time:</td>
-  <td>2:30pm-6:30pm Sunday, except the third Sunday of a month</td>
+  <td>2:30pm-6:30pm each Sunday, except the third Sunday of a month. No retreat 8/13-8/27.</td>
 </tr>
 <tr><td>Duration:</td>
   <td>4 hour</td>
