--- a/event.html
+++ b/event.html
@@ -65,24 +65,23 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Date &amp;Time:</td>
-  <td>1:30-2:30pm each Sunday. <b>No class on 8/13 and 8/27.</b></td>
+  <td>1:30-2:30pm each Sunday.</td>
 </tr>
-<tr><td>Duration:</td>
-<td>1 hour</td>
+<tr><td>Donation:</td>
+<td>$0-10 sliding scale</td>
 </tr>
-<tr><td>Fee:</td>
-<td>$10</td>
-</tr>
+<!--
 <tr><td></td>
 <td>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="5FUM9CFBUEXHC">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_paynow_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
 </td>
 </tr>
+-->
 </table>
 
 
@@ -94,23 +93,11 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Date &amp; Time:</td>
-  <td>2:30pm-6:30pm each Sunday, except the third Sunday of a month. <b>No retreat 8/13-9/17.</b></td>
-</tr>
-<tr><td>Duration:</td>
-  <td>4 hour</td>
+  <td>2:30pm-6:30pm each Sunday, except the third Sunday of a month.</td>
 </tr>
 </tr>
 <tr><td>Donation:</td>
   <td>$0-20 sliding scale</td>
-</tr>
-<tr><td></td>
-  <td><form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-<input type="hidden" name="cmd" value="_s-xclick">
-<input type="hidden" name="hosted_button_id" value="N47JJVFXNFR64">
-<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-</form>
-</td>
 </tr>
 <tr>
   <td>Equipment:</td>
@@ -121,11 +108,14 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 
 <div class="page-section">
 <h2 class="section-title">Fee</h2>
-<p>We charge $10 for the Basics class.
+<p>We do not charge for these events. Any donation is appreciated.
 
-We call for a sliding scale $20 donation for the meditation retreat.
-
-However, our policy is that no one is ever turned away due to lack of fund.
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="N47JJVFXNFR64">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
 
 <div class="page-section">
 <h2 class="section-title">Get Connected</h2>
@@ -137,6 +127,6 @@ Please fill out <a href="http://sv.mikecrm.com/j1xDwH5">this form</a> if you are
 <div class="page-section">
 <h2 class="section-title">Instructor Bio</h2>
 <p>
-Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a college student. He has studied and practiced Taoist inner alchemy and Buddhist Zen meditation for over a decade. He takes meditation retreats regularly each year including those in a completely dark environment, so called darkroom retreat. He has taught inner meditation classes from basic to advanced level. He has a Ph.D. degree in Computer Science and is good at interpreting spiritual traditions with a scientific approach. His teaching style is using simple contemporary concepts to explain practices that are considered mysterious. He also offers private energy healing sessions and classes. Please contact him at 650-483-2544 if you are interested in those.
+Lewis Young is a veteran meditator and meditation instructor. He practiced Qi Gong and was able to heal when he was a college student. He has studied and practiced Taoist inner alchemy and Buddhist Zen meditation for over a decade. He takes meditation retreats regularly each year including those in a completely dark environment. He has taught inner meditation classes from basic to advanced level. He has a Ph.D. degree in Computer Science and is good at interpreting spiritual traditions with a scientific approach. His teaching style is using simple contemporary concepts to explain practices that are considered mysterious. He also offers private energy healing sessions and classes. Please contact him at 650-483-2544 if you are interested in those.
 </p>
 </div>
