--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@ layout: page
 
 Inner meditation is a particularly beneficial practice.
 
-It concentrates inward, not outside, namely, it focuses your attention and awareness on internal places of your body.
+You look at, listen to, and concentrate on the insides of you own self by applying few basic techniques in concert, such as good body posture, proper breathing methods, relaxation, and mental power.
+
+It brings all your attention inward and circulates energy flows inside your body.
 
 This contrasts to some meditation styles that require music or imagination of external images.
-
-In inner meditation, you look at, listen to, and feel the insides of you own self by applying few basic techniques in concert, including breath, concentration, relaxation, good body posture, and mental power.
 </p>
 
 <p>
@@ -26,9 +26,9 @@ Bringing all attention inward triggers profound changes in the body and the brai
 
 It develops and improves our energy flow, also known as <em>qi</em> (pronounce chee).
 
-The development of qi within yourself enhances health, generates a sense of calm and well-being, and replenishes inner energy reserves.
+The development of qi within your own body enhances health, generates a sense of calm and well-being, and replenishes inner energy reserves.
 
-Further, it develops awareness and consciousness based on improved body conditions, and this leads you along on a path of spiritual enlightenment.
+Furthermore, it develops awareness and consciousness based on improved body conditions, and this leads you along on a path of spiritual enlightenment.
 </p>
 </div>
 
@@ -40,7 +40,7 @@ People start to feel physical and mental changes after they practice inner medit
 
 Some people even begin to heal others.
 
-Here is some commonly seen benefits.
+Here are some commonly seen benefits.
 
 <h3 class="list-title">Physiologically</h3>
 <p>
@@ -54,15 +54,14 @@ Here is some commonly seen benefits.
 <h3 class="list-title">Psychologically</h3>
 <ul>
 <li>Having more love and happy feeling</li>
-<li>Calming down more easily</li>
-<li>Concentrate more easily</li>
-<li>Becoming more optimistic and positive</li>
-<li>Becoming more open and tolerant</li>
+<li>Calming down easily</li>
+<li>Able to concentrate easily</li>
+<li>More open, optimistic, and positive</li>
 <li>Having fewer or no complaints</li>
-<li>Having fewer or no dramatic emotional changes&nbsp;</li>
+<li>Having fewer or no emotional pressure</li>
 </ul>
 
-Besides having improved physical and mental status, many experienced practitioners start to feel deep connections among all living beings and perceive subtle energy interactions between them and their environments.
+Besides having improved physical and mental status, many experienced practitioners start to feel deep connections among all living beings and perceive subtle energy interactions among them and their environments.
 
 <!--
 <h3 class="list-title">During meditation</h3>
