--- a/index.html
+++ b/index.html
@@ -14,21 +14,24 @@ layout: page
 
 Inner meditation is a particularly beneficial practice.
 
-You look at, listen to, and concentrate on the insides of you own self by applying few basic techniques in concert, such as good body posture, proper breathing methods, relaxation, and mental power.
+You look at, listen to, and concentrate on the insides of your own self
+by applying few basic techniques in concert, such as good body posture,
+proper breathing methods, relaxation, and mental power.
 
-It brings all your attention inward and circulates energy flows inside your body.
-
-This contrasts to some meditation styles that require music or imagination of external images.
+It brings all your attention and awareness inward and circulates energy
+flows inside your body.
 </p>
 
 <p>
-Bringing all attention inward triggers profound changes in the body and the brain.
+This triggers profound changes in the body and the brain.
 
-It develops and improves our energy flow, also known as <em>qi</em> (pronounce chee).
+It develops and improves body energy flow, also known as <em>qi</em> (pronounce chee). 
 
-The development of qi within your own body enhances health, generates a sense of calm and well-being, and replenishes inner energy reserves.
+The development of qi within your own body enhances health,
+generates a sense of calm and well-being, and replenishes inner energy reserves.
 
-Furthermore, it develops awareness and consciousness based on improved body conditions, and this leads you along on a path of spiritual enlightenment.
+Furthermore, it develops awareness and consciousness based on improved body conditions,
+and this leads you along on a path of spiritual enlightenment.
 </p>
 </div>
 
@@ -36,7 +39,8 @@ Furthermore, it develops awareness and consciousness based on improved body cond
 <div class="page-section">
 <h2 class="section-title">Benefits</h2>
 <p>
-People start to feel physical and mental changes after they practice inner meditation for some time because this practice has healing effects in nature.
+People start to feel physical and mental changes after they practice inner
+ meditation for some time because this practice has healing effects in nature.
 
 Some people even begin to heal others.
 
