--- a/event.html
+++ b/event.html
@@ -65,7 +65,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Date &amp;Time:</td>
-  <td>1:30-2:30pm each Sunday.</td>
+  <td>9:00-10:00 am each Sunday.</td>
 </tr>
 <tr><td>Donation:</td>
 <td>$0-10 sliding scale</td>
@@ -93,7 +93,7 @@ The latest update is on <a href="https://www.meetup.com/Arts-Unity-Movement-Meet
 </tr>
 <tr>
   <td>Date &amp; Time:</td>
-  <td>2:30pm-6:30pm each Sunday, except the third Sunday of a month.</td>
+  <td>Temporarily unavailable.</td>
 </tr>
 </tr>
 <tr><td>Donation:</td>
