Update qi center image.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: page
 <div class="page-introduction" id="introduction">
 <h2 class="section-title">Introduction</h2>
 <p>
-<img id="img-inner-orbit" src="/images/orbits-points.png"
+<img id="img-inner-orbit" src="images/qi-centers.png"
       height="300" alt="inner energy flow"/>
 
 Inner meditation is a particularly beneficial practice.
