Update date to Saturday.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: page
 Inner meditation is a particularly beneficial practice.
 
 You look at, listen to, and concentrate on the insides of your own self
-by applying few basic techniques in concert, such as good body posture,
+by applying few basic techniques in concerts, such as good body posture,
 proper breathing methods, relaxation, and mental power.
 
 It brings all your attention and awareness inward and circulates energy
