--- a/workshop.html
+++ b/workshop.html
@@ -1,8 +1,19 @@
+<head>
+<title>人体内在修证初步</title>
+</head>
+<body style="text-align:center;">
+
+<table style="width:90%">
+<tr><td style="text-align:center;">
 <h1>人体内在修炼实证初步</h1>
-<img height="640" src="/images/InnerMeditation-image.png" float="right"/>
 <h2>课程简介</h2>
-<p>人体内在修炼实证的主要目的是锻炼培育自身的精、气、神，本课程讲授锻炼精气神的基本方法。
-通过实践，学员们可以达到如下目标：</p>
+</td></tr>
+<tr><td>
+<img id="img-inner-orbit" src="images/qi-centers.png"
+      height="300" alt="inner energy flow" style="float:right;"/>
+<p>
+人体内在修炼实证的主要目的是锻炼培育自身的精、气、神，本课程讲授锻炼精气神的基本方法。
+通过实践，学员们可以达到如下目标：
 <ol>
 <li>掌握锻炼身心的基本方法，让自己能够维护自己的身体健康和心情愉快。
 <li>理解体育锻炼、站桩、和打坐的关系，可以在生活中随时采用适合自己情况的锻炼方式。
@@ -10,8 +21,14 @@
 长期坚持锻炼，可以进入到生命精气神的培育实践中。
 <li>理解人体内在修证的内涵和外延，从而客观全面地看待和理解身体、心理和外部环境的关系。
 </ol>
+</p>
+</td></tr>
 
+<tr><td style="text-align:center;">
 <h2>课程安排</h2>
+</td></tr>
+
+<tr><td>
 <h3>时间</h3>
 <bold>２月９日晚１９－２１点：</bold>人体内在修炼实证简介<br>
 <bold>２月１０、１１日上午９点－下午１７点３０分：</bold>理论和实践<br>
@@ -19,10 +36,10 @@
 
 <h3>课后辅导</h3>
 <p>从２月１２日到３月１１日（除去２月１６日－２５日）每周安排一次辅导答疑，
-帮助学员全面掌握所学内容，促进锻炼进展。具体时间和地点在授课后告知。
+帮助学员全面掌握所学内容，促进锻炼进展。具体时间和地点在授课时告知。
 </p>
 
-<h3>授课老师:</h3> 赵鲁
+<h3>授课老师</h3> 赵鲁
 
 <h3>授课地点</h3>
 <p>清华大学校内，具体位置稍后告知。
@@ -30,5 +47,10 @@
 <h3>课程费用</h3>
 <p>学员根据自己的情况，自主决定数额。
 
+<tr><td style="text-align:center;">
 <h2>报名方式</h2>
-<p><a href="http://sv.mikecrm.com/oXSoXwC">请点击此处</a>，提交报名表格，每个学员填一份。
+<p><a href="http://sv.mikecrm.com/oXSoXwC">请点击此处</a>，提交报名表格，每位学员填一份。
+</td></tr>
+
+</table>
+</body>
