Make table center by setting margin to auto.

--- a/workshop.html
+++ b/workshop.html
@@ -1,9 +1,9 @@
 <head>
 <title>人体内在修证初步</title>
 </head>
-<body style="text-align:center;">
+<body>
 
-<table style="width:90%">
+<table style="width:90%;margin:auto;">
 <tr><td style="text-align:center;">
 <h1>人体内在修炼实证初步</h1>
 <h2>课程简介</h2>
