Adjust image margin.

--- a/workshop.html
+++ b/workshop.html
@@ -10,7 +10,7 @@
 </td></tr>
 <tr><td>
 <img id="img-inner-orbit" src="images/qi-centers.png"
-      height="300" alt="inner energy flow" style="float:right;"/>
+      height="300" alt="inner energy flow" style="margin:20px;float:right;"/>
 <p>
 人体内在修炼实证的主要目的是锻炼培育自身的精、气、神，本课程讲授锻炼精气神的基本方法。
 通过实践，学员们可以达到如下目标：
